--- a/news-extractor-ui/frontend/src/locales/en.json
+++ b/news-extractor-ui/frontend/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "app": {
     "title": "Smart News Extractor",
-    "subtitle": "One-click extraction of news content from the web. Supports 9 mainstream platforms including WeChat, Toutiao, NetEase, Sohu, Tencent, Lenny, Naver, Detik, and Quora",
+    "subtitle": "One-click extraction of news content from the web. Supports 10 mainstream platforms including WeChat, Toutiao, NetEase, Sohu, Tencent, Lenny, Naver, Detik, Quora, and BBC",
     "stats": {
       "platforms": "Platforms",
       "accuracy": "Accuracy",
@@ -47,6 +47,10 @@
     "quora": {
       "name": "Quora",
       "description": "Extract Quora Q&A content"
+    },
+    "bbc": {
+      "name": "BBC News",
+      "description": "Extract BBC news content"
     }
   },
   "input": {
@@ -62,7 +66,8 @@
       "naver": "Paste or enter Naver blog link, e.g.: https://blog.naver.com/username/223618759620",
       "detik": "Paste or enter Detik News link, e.g.: https://news.detik.com/berita/d-7123456/news-title",
       "quora": "Paste or enter Quora answer link, e.g.: https://www.quora.com/question/answers/123456789",
-      "default": "Paste or enter news link, supports WeChat, Toutiao, Lenny, Naver, Detik, Quora"
+      "bbc": "Paste or enter BBC News link, e.g.: https://www.bbc.com/news/articles/c797qlx93j0o",
+      "default": "Paste or enter news link, supports WeChat, Toutiao, Lenny, Naver, Detik, Quora, BBC"
     },
     "selectPlatform": "Please select a platform first",
     "extractButton": "Start Extraction",
