--- a/news-extractor-ui/frontend/src/locales/zh-CN.json
+++ b/news-extractor-ui/frontend/src/locales/zh-CN.json
@@ -1,7 +1,7 @@
 {
   "app": {
     "title": "智能新闻提取器",
-    "subtitle": "一键提取全网新闻内容，支持微信、头条、网易、搜狐、腾讯、Lenny、Naver、Detik、Quora、BBC等10个主流平台",
+    "subtitle": "一键提取全网新闻内容，支持微信、头条、网易、搜狐、腾讯、Lenny、Naver、Detik、Quora、BBC、CNN等11个主流平台",
     "stats": {
       "platforms": "支持平台",
       "accuracy": "准确率",
@@ -51,6 +51,10 @@
     "bbc": {
       "name": "BBC News",
       "description": "提取 BBC 新闻内容"
+    },
+    "cnn": {
+      "name": "CNN News",
+      "description": "提取 CNN 新闻内容"
     }
   },
   "input": {
@@ -67,7 +71,8 @@
       "detik": "粘贴或输入 Detik News 链接，例如: https://news.detik.com/berita/d-7123456/news-title",
       "quora": "粘贴或输入 Quora 回答链接，例如: https://www.quora.com/question/answers/123456789",
       "bbc": "粘贴或输入 BBC News 链接，例如: https://www.bbc.com/news/articles/c797qlx93j0o",
-      "default": "粘贴或输入新闻链接，支持微信、头条、Lenny、Naver、Detik、Quora、BBC"
+      "cnn": "粘贴或输入 CNN News 链接，例如: https://edition.cnn.com/2025/10/27/uk/sami-hamdi-detained-ice-intl",
+      "default": "粘贴或输入新闻链接，支持微信、头条、Lenny、Naver、Detik、Quora、BBC、CNN"
     },
     "selectPlatform": "请先选择一个平台",
     "extractButton": "开始提取",
